# DynamicAlgorithmSelection

./: .gitignore  .pre-commit-config.yaml  CDB_study.slurm  LOIO_train_set.json  README.md  agent.py  bbob_optima.jsonl  compare2ELA.slurm  comprehensive_study.slurm  config  dummy_case.slurm  experiment.py  main.py  neuroevolution_config  only_PG.slurm  portfolio_study.slurm  pyproject.toml  reward_study.slurm  runner.sh  runner.slurm  single_algorithm_CDB_study.slurm  test_scenario.slurm  visualize.py
dynamicalgorithmselection/: agent.py  agent_utils.py  experiment.py  generate_global_optima.py  main.py  utils.py
dynamicalgorithmselection/NeurELA/: NeurELA.pkl  NeurELA.py  feature_extractor.py
dynamicalgorithmselection/agents/: RLDAS_agent.py  RLDAS_random_agent.py  agent.py  agent_reward.py  agent_state.py  agent_utils.py  neuroevolution_agent.py  policy_gradient_agent.py  ppo_utils.py  random_agent.py
dynamicalgorithmselection/analysis/: __init__.py  __main__.py  action_probabilities.py  diversity_analysis.py  explainability.py  latex_utils.py  loading.py  metrics.py  plotting.py  policy_concentration.py  preprocessing.py  statistical_tests.py  utils.py
dynamicalgorithmselection/datasets/: MA-BBOB.py
dynamicalgorithmselection/experiments/: core.py  cross_validation.py  experiment.py  neuroevolution.py  utils.py
dynamicalgorithmselection/optimizers/: G3PCX.py  IPSO.py  LMCMAES.py  Optimizer.py  RestartOptimizer.py  SPSO.py  SPSOL.py  __init__.py
dynamicalgorithmselection/optimizers/DE/: DE.py  JDE21.py  MADDE.py  NL_SHADE_RSP.py
dynamicalgorithmselection/optimizers/DS/: DS.py  POWELL.py
dynamicalgorithmselection/optimizers/ES/: CMAES.py  ES.py  LMCMAES.py  OPOA2015.py
dynamicalgorithmselection/optimizers/EXAMPLE/: DUMMY.py  IDENTITY.py
dynamicalgorithmselection/optimizers/GA/: G3PCX.py  GA.py
optimizers/: G3PCX.py  IPSO.py  LMCMAES.py  Optimizer.py  SPSO.py  SPSOL.py
tests/: tes_analysis.py  test_agent.py  test_cmaes_set_data.py  test_cross_validation.py  test_experiment.py  test_experiments_core.py  test_policy_gradient_agent.py
(+5 files in other folders)
