[project]
name = "dynamicalgorithmselection"
version = "0.1.0"
description = ""
authors = [{ name = "wniec", email = "niecwladek@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "pypop7>=0.0.82,<0.0.83",
    "torch==2.6.0",
    "coco-experiment>=2.8.1,<3",
    "cocopp>=2.8.0,<3",
    "tqdm>=4.67.1,<5",
    "wandb>=0.22.2,<0.23",
    "polars>=1.34.0,<2",
    "wandb-workspaces>=0.1.19,<0.2",
    "tenacity>=9.1.2,<10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
